--- a/ejejmplo 2/style2.css
+++ b/ejejmplo 2/style2.css
@@ -21,11 +21,14 @@ label {
     padding: 1rem;
     text-align: center;
     display: flex;
-    justify-content: flex-start; /* Align to the left */
+    justify-content: flex-start;
+    /* Align to the left */
     margin-bottom: 30px;
     cursor: pointer;
-    align-items: center; /* Center vertically within the label */
+    align-items: center;
+    /* Center vertically within the label */
 }
+
 /* input {
     display: none;
 } */
@@ -35,12 +38,30 @@ label {
     height: 200px;
     background-color: tomato;
     transition: .4s;
+    /* Me cambia la caja roja a la izquierda */
+    /* transform: translateX(-50%) translateY(-50%); */
+    /* Center the box */
 }
+input[type="checkbox"] {
+    margin: 0 auto;
+    /* Center horizontally */
+    display: block;
+    /* Make it a block-level element for margin to work */
+}
+/* cuando input activo seleccionamos su hermano adyacente que es la caja */
+input:checked+.box {
+    /* -200px gira a la izquierda y sin - a la derecha */
+    /* transform: translate(-200px) rotate(80deg) scale(2); */
 
-
+    /* diferente arriba */
+    transform: translateY(200px) rotate(80deg) scale(2);
+}
 
 /* cuando input activo seleccionamos su hermano adyacente que es la caja */
-input:checked+.box{
+/* input:checked+.box { */
     /* -200px gira a la izquierda y sin - a la derecha */
-    transform: translate(-200px) rotate(80deg) scale(2);
-}
+    /* transform: translate(-200px) rotate(80deg) scale(2); */
+
+    /* diferente arriba */
+    /* transform: translateY(200px) rotate(80deg) scale(2);
+} */
