--- a/ejejmplo 6/style2.css
+++ b/ejejmplo 6/style2.css
@@ -35,6 +35,27 @@ label {
 
 .box {
     position: absolute;
+    /* position: relative; */
+    /* nos desplaza hacia abajo pero su posicion original sedigue conservando */
+    /* cualquier elelemnto que posicionemos debajo de el se va a posicionar sobre su posicion original, no donde esta actualmente */
+    /* separa todas las cajas hacia abajo */
+    top: 40px;
+    /* separacion entre la cajas */
+    margin-top: 20px;
+    right: 30px;
+    left: 20px;
+    
+
+    width: 200px;
+    height: 200px;
+    background-color: tomato;
+    transition: .4s;
+    /* Me cambia la caja roja a la izquierda */
+    /* transform: translateX(-50%) translateY(-50%); */
+    /* Center the box */
+}
+.rojo{
+    position: relative;
     /* nos desplaza hacia abajo pero su posicion original sedigue conservando */
     /* cualquier elelemnto que posicionemos debajo de el se va a posicionar sobre su posicion original, no donde esta actualmente */
     /* separa todas las cajas hacia abajo */
