Ejejmplo 6 final con absolute y relative sos ejejmplos

--- a/ejejmplo 6/style3.css
+++ b/ejejmplo 6/style3.css
@@ -55,7 +55,7 @@ label {
     /* Center the box */
 }
 .rojo{
-    position: relative;
+    position: absolute;
     /* nos desplaza hacia abajo pero su posicion original sedigue conservando */
     /* cualquier elelemnto que posicionemos debajo de el se va a posicionar sobre su posicion original, no donde esta actualmente */
     /* separa todas las cajas hacia abajo */
