--- a/ejejmplo 1/style.css
+++ b/ejejmplo 1/style.css
@@ -24,7 +24,7 @@ h2{
 } */
 
 /* selector adyacente */
-/* Seleccionamos lo p dentro de sections diferentes pero misma clase p*/
+/* Seleccionamos los p dentro de sections diferentes pero misma clase p*/
 .titulo + p {
     background-color: black;
     color: white;
